Form controls in <fieldset disabled> should not be focusable. https://bugs.webkit.org/show_bug.cgi?id=87380

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/forms/fieldset/focus-in-fieldset-disabled.html

* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::supportsFocus):
Refer to disabled() instead of m_disabled to take account of wrapping
fieldset elements.

LayoutTests:

* fast/forms/fieldset/fieldset-disabled-expected.txt:
* fast/forms/fieldset/fieldset-disabled.html:
Updated because disabled controls are not focusable.
Also, remove testing elements to remove unnecessary blank lines.
* fast/forms/fieldset/focus-in-fieldset-disabled-expected.txt: Added.
* fast/forms/fieldset/focus-in-fieldset-disabled.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@119023 bbb929c8-8fbe-4397-9dbb-9b2b20218538